# LambdaPi

./: .gitignore  .project  Interpreter.hs  LP_Ast.hs  LambdaPi.cabal  LambdaPi.hs  LambdaPi.hs.bak  Printer_LP.hs  README.md
src/: Ast.hs  Globals.hs  Interpreter.hs  LP.hs  LP_Ast.hs  LambdaPi_Core.hs  LambdaPi_UndersCore.hs  Lens.hs  Main.hs  Operators.hs  Parser.hs  Parser_LP.hs  Printer.hs  Printer_LP.hs  REPL.hs  Tests.hs  VPrinter.hs
