name:           LambdaPi
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         Rafael

executable LambdaPi
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Globals,
                   REPL,
                   Operators

library 
  build-depends:   
                   base >= 4,
                   haskeline,
                   parsec,
                   pretty,
                   mtl,
                   utf8-string,
                   bytestring
  hs-source-dirs:  src
  ghc-options:     -Wall
  other-modules:   
                   Main,
                   Globals,
                   REPL,
                   Operators

